--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
   </section>
 
 
-  <section class="shape_one container mt-5">
+  <section class="shape_one container mt-5 mb-5">
     <div class="row">
       <div class="col-md-3 col-12">
         <div style="border: 1px solid #bce8f1;">
@@ -584,13 +584,13 @@
             <p class="mb-1" style="font-size: 18px;font-weight: 600;text-align: center;color:#FFF;">Our history, traditions and culture</p>
           </div>
           <div class="blog_left_content">
-            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4"><i class="fa fa-folder-open-o" aria-hidden="true"></i> News and publications in Armenia</p>
-            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4"><i class="fa fa-folder-open-o" aria-hidden="true"></i> From yesterday to today</p>
-            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4"><i class="fa fa-folder-open-o" aria-hidden="true"></i> History և historical figures</p>
-            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4"><i class="fa fa-folder-open-o" aria-hidden="true"></i> Religious sights and monuments in Armenia</p>
-            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4"><i class="fa fa-folder-open-o" aria-hidden="true"></i> Armenian monuments in the world</p>
-            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4"><i class="fa fa-folder-open-o" aria-hidden="true"></i> Because in our memory</p>
-            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4"><i class="fa fa-folder-open-o" aria-hidden="true"></i> State and territorial organization of Armenia</p>
+            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4;cursor: pointer;"><i class="fa fa-folder-open-o" aria-hidden="true"></i> News and publications in Armenia</p>
+            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4;cursor: pointer;"><i class="fa fa-folder-open-o" aria-hidden="true"></i> From yesterday to today</p>
+            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4;cursor: pointer;"><i class="fa fa-folder-open-o" aria-hidden="true"></i> History և historical figures</p>
+            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4;cursor: pointer;"><i class="fa fa-folder-open-o" aria-hidden="true"></i> Religious sights and monuments in Armenia</p>
+            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4;cursor: pointer;"><i class="fa fa-folder-open-o" aria-hidden="true"></i> Armenian monuments in the world</p>
+            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4;cursor: pointer;"><i class="fa fa-folder-open-o" aria-hidden="true"></i> Because in our memory</p>
+            <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4;cursor: pointer;"><i class="fa fa-folder-open-o" aria-hidden="true"></i> State and territorial organization of Armenia</p>
           </div>
         </div>
       </div>
@@ -613,8 +613,8 @@
         </div>
         </div>
 
-        <div class="d-flex main_blog_car_head mt-5">
-          <div>
+        <div class="d-flex main_blog_car_head p-2 mt-2">
+          <div class="main_blog_car_content1">
             <div class="d-flex" style="flex-direction: column;justify-content: space-between;height: 100%;">
             <img src="images/ATTArmenia_files/thumb-upUPY7eG.jpg" alt="" class="img-fluid">
             <span>
@@ -623,13 +623,13 @@
             </span>
           </div>
           </div>
-          <div class="ml-4">
+          <div class="ml-4 main_blog_car_content2">
             <div class="d-flex" style="flex-direction: column;justify-content: space-between;height: 100%;">
               <a href="#">Armen Sarkissian - The President of the Republic of Armenia</a>
               <p>Published by : ArthurPirlian</p>
             </div>
           </div>
-          <div>
+          <div class="main_blog_car_content3">
             <div class="d-flex" style="flex-direction: column;justify-content: space-between;height: 100%;">
               <p>Total Views : 349</p>
               <a href="#">Details</a>
@@ -638,8 +638,8 @@
           </div>
         </div>
 
-        <div class="d-flex main_blog_car_head mt-5">
-          <div>
+        <div class="d-flex main_blog_car_head p-2 mt-2">
+          <div class="main_blog_car_content1">
             <div class="d-flex" style="flex-direction: column;justify-content: space-between;height: 100%;">
             <img src="images/ATTArmenia_files/thumb-upXJE0dS.jpg" alt="" class="img-fluid">
             <span>
@@ -648,13 +648,63 @@
             </span>
           </div>
           </div>
-          <div class="ml-4">
+          <div class="ml-4 main_blog_car_content2">
             <div class="d-flex" style="flex-direction: column;justify-content: space-between;height: 100%;">
               <a href="#">Nikol Pashinyan - RA Prime Minister - Pash ...</a>
               <p>Published by : ArthurPirlian</p>
             </div>
           </div>
-          <div>
+          <div class="main_blog_car_content3">
+            <div class="d-flex" style="flex-direction: column;justify-content: space-between;height: 100%;">
+              <p>Total Views : 349</p>
+              <a href="#">Details</a>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="d-flex main_blog_car_head p-2 mt-2">
+          <div class="main_blog_car_content1">
+            <div class="d-flex" style="flex-direction: column;justify-content: space-between;height: 100%;">
+            <img src="images/ATTArmenia_files/thumb-upfRXaQZ.jpeg" alt="" class="img-fluid">
+            <span>
+              <p class="mb-0">1PP2018/6527</p>
+              <p>26-09-2018</p>
+            </span>
+          </div>
+          </div>
+          <div class="ml-4 main_blog_car_content2">
+            <div class="d-flex" style="flex-direction: column;justify-content: space-between;height: 100%;">
+              <a href="#">Nikol Pashinyan - RA Prime Minister - Pash ...</a>
+              <p>Published by : ArthurPirlian</p>
+            </div>
+          </div>
+          <div class="main_blog_car_content3">
+            <div class="d-flex" style="flex-direction: column;justify-content: space-between;height: 100%;">
+              <p>Total Views : 349</p>
+              <a href="#">Details</a>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="d-flex main_blog_car_head p-2 mt-2">
+          <div class="main_blog_car_content1">
+            <div class="d-flex" style="flex-direction: column;justify-content: space-between;height: 100%;">
+            <img src="images/ATTArmenia_files/thumb-kimkardashian0.jpg" alt="" class="img-fluid">
+            <span>
+              <p class="mb-0">1PP2018/6527</p>
+              <p>26-09-2018</p>
+            </span>
+          </div>
+          </div>
+          <div class="ml-4 main_blog_car_content2">
+            <div class="d-flex" style="flex-direction: column;justify-content: space-between;height: 100%;">
+              <a href="#">Kim Kardashian</a>
+              <p>Published by : ArthurPirlian</p>
+            </div>
+          </div>
+          <div class="main_blog_car_content3">
             <div class="d-flex" style="flex-direction: column;justify-content: space-between;height: 100%;">
               <p>Total Views : 349</p>
               <a href="#">Details</a>
