--- a/index.html
+++ b/index.html
@@ -419,23 +419,23 @@
         <div style="border: 1px solid #bce8f1;padding-bottom: 1rem;">
           <p class="py-2 text-center left_main_child2_head">Your Photos & Videos, Wines and Recipes</p>
           <div class="sec_left_info px-3" style="padding-top: 1rem;">
-            <div class="sec_left_main_child_content">
+            <div class="sec_left_main_child_content coool">
               <img src="images/ATTArmenia_files/foto_vedio.jpg" alt="" class="img-fluid">
               <p class="text-center">Photos & videos</p>
             </div>
-            <div class="sec_left_main_child_content">
+            <div class="sec_left_main_child_content coool">
               <img src="images/ATTArmenia_files/gallery.png" alt="" class="img-fluid">
               <p class="text-center">Gallery</p>
             </div>
-            <div class="sec_left_main_child_content">
+            <div class="sec_left_main_child_content coool">
               <img src="images/ATTArmenia_files/att_youtube_v1.jpg" alt="" class="img-fluid">
               <p class="text-center">Music & Dance</p>
             </div>
-            <div class="sec_left_main_child_content">
+            <div class="sec_left_main_child_content coool">
               <img src="images/ATTArmenia_files/wine.jpg" alt="" class="img-fluid">
               <p class="text-center">Wine & Spirituous</p>
             </div>
-            <div class="sec_left_main_child_content">
+            <div class="sec_left_main_child_content coool">
               <img src="images/ATTArmenia_files/Att_Armenian-recipes.jpg" alt="" class="img-fluid">
               <p class="text-center">Cookery & Pastry</p>
             </div>
@@ -568,7 +568,7 @@
       </div>
       <div class="col-md-6 col-12">
         <div class="d-flex justify-content-center">
-          <img src="images/ATTArmenia_files/profilepicture.png" alt="" class="img-fluid" style="width: 20rem;">
+          <img src="images/ATTArmenia_files/profilepicture.png" alt="" class="img-fluid home_about_img_right" style="width: 20rem;">
         </div>
       </div>
     </div>
