--- a/index.html
+++ b/index.html
@@ -616,7 +616,9 @@
         <div class="d-flex main_blog_car_head p-2 mt-2">
           <div class="main_blog_car_content1">
             <div class="d-flex" style="flex-direction: column;justify-content: space-between;height: 100%;">
+            <div>
             <img src="images/ATTArmenia_files/thumb-upUPY7eG.jpg" alt="" class="img-fluid">
+            </div>
             <span>
               <p class="mb-0">1PP2018/6527</p>
               <p>26-09-2018</p>
