--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
   </section>
 
 
-  <section class="shape_one container mt-5">
+  <!-- <section class="shape_one container mt-5">
     <div class="shape_head py-4" style="position:relative;border-bottom: 1px solid #bce8f1;background: #CEE8F5;">
       <h4 class="text-center mb-4"
         style="color: #3a87ad;position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);">About Us</h4>
@@ -573,7 +573,7 @@
       </div>
     </div>
 
-  </section>
+  </section> -->
 
 
   <section class="shape_one container mt-5 mb-5">
@@ -593,6 +593,36 @@
             <p class="p-3 mb-0" style="color: #555555;border-bottom: 1px solid #dbdbdb;border-top: 1px solid #fff;background-color: #F4F4F4;cursor: pointer;"><i class="fa fa-folder-open-o" aria-hidden="true"></i> State and territorial organization of Armenia</p>
           </div>
         </div>
+
+        <section class="shape_one mt-5" style="border: 1px solid #bce8f1;"> 
+        <div class="shape_head py-4" style="position:relative;border-bottom: 1px solid #bce8f1;background: #CEE8F5;">
+          <h5 class="text-center mb-4"
+            style="color: #3a87ad;position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);">Editorial</h5>
+        </div>
+    
+        <div class="mt-3 home_about_content_pr">
+          <div class="home_about_content">
+          <div class="w-100">
+            <p class="font-weight-bolder home_about_content_head">Arthur PIRLIAN</p>
+            <p class="home_about_content_sub">
+              La culture est toujours intimement liée à l’esprit de la nation qui l'a vu naître. Elle joue un rôle
+              prépondérant dans la vie de l’État et dans la préservation de l'identit&e...
+            </p>
+            
+          </div>
+          <div class="">
+            <div class="d-flex justify-content-center">
+              <img src="images/ATTArmenia_files/profilepicture.png" alt="" class="img-fluid home_about_img_right">
+            </div>
+          </div>
+        </div>
+          <a href="" class="home_about_btn"><i class="fa fa-user mr-1" aria-hidden="true"
+            style="font-size: 1.2rem;margin-top: 1rem;"></i> Know More</a>
+        </div>
+   
+
+
+        </section>
       </div>
 
 
@@ -853,3 +883,6 @@ $(window).scroll(function(){
 </body>
 
 </html>
+
+
+
