--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
             </div>
           </div>
         </div>
-          <a href="" class="home_about_btn"><i class="fa fa-user mr-1" aria-hidden="true"
+          <a href="#" class="home_about_btn"><i class="fa fa-user mr-1" aria-hidden="true"
             style="font-size: 1.2rem;margin-top: 1rem;"></i> Know More</a>
         </div>
    
