--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
 <body>
   <header class="header_main">
-    <nav class="navbar nav_one d-flex pb-0 px-5">
+    <nav class="navbar nav_one d-flex pb-0">
       <a class="navbar-brand nav_one_logo" href="index.html">
         <img src="images/ATTArmenia_files/att_armnia01_Transparent_TextCouleur_opt-removebg-preview.png" alt=""
           class="img-fluid">
       </a>
-      <ul class="pt-4 navbar-nav nav_one_login">
+      <ul class="navbar-nav nav_one_login">
         <li class="nav-item px-2">
           <button class="login_btn slide_right">Login</button>
         </li>
@@ -50,11 +50,9 @@
       </a>
     </marquee>
 
-    <nav class="navbar navbar-expand-lg nav_two" style="z-index: 75;">
+    <!-- <nav class="navbar navbar-expand-lg nav_two" style="z-index: 75;">
       <div class="container-fluid text-uppercase">
-        <a class="navbar-brand nav_two_logo" href="index.html">
-          <img src="images/ATTArmenia_files/home.png" alt="" class="img-fluid">
-        </a>
+ 
         <div class="navbar_nav_link">
           <ul class="navbar-nav">
             <li class="nav-item px-2">
@@ -81,21 +79,60 @@
           </ul>
         </div>
 
-        <div class="country_flags">
-          <span class="flag_container mx-1">
-            <img src="images/ATTArmenia_files/armenia.png" alt="" class="img-fluid">
-          </span>
-          <span class="flag_container mx-1">
-            <img src="images/ATTArmenia_files/france.png" alt="" class="img-fluid">
-          </span>
-          <span class="flag_container mx-1">
-            <img src="images/ATTArmenia_files/uk.png" alt="" class="img-fluid">
-          </span>
-          <span class="flag_container mx-1">
-            <img src="images/ATTArmenia_files/russia.png" alt="" class="img-fluid">
-          </span>
-        </div>
 
+
+      </div>
+    </nav> -->
+    <nav class="navbar navbar-expand-lg nav_two"  style="z-index: 75;">
+      <div class="container-fluid text-uppercase">
+        <a class="navbar-brand nav_two_logo" href="index.html">
+          <img src="images/ATTArmenia_files/home.png" alt="" class="img-fluid">
+        </a>
+        <button class="navbar-toggler nav_toggle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse navbar_nav_link" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item px-2">
+              <a class="nav-link" aria-current="page" href="#">MY BLOG</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="#service_div">MY SPACE</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="#pricing_div">MY ADS</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="#projects_div">GALLERY</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="#contact_div">ABOUT US</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="#contact_div">CONTACT US</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="#contact_div">ASSISTANCE</a>
+            </li>
+          </ul>
+
+          <div class="country_flags">
+            <span class="flag_container mx-1">
+              <img src="images/ATTArmenia_files/armenia.png" alt="" class="img-fluid">
+            </span>
+            <span class="flag_container mx-1">
+              <img src="images/ATTArmenia_files/france.png" alt="" class="img-fluid">
+            </span>
+            <span class="flag_container mx-1">
+              <img src="images/ATTArmenia_files/uk.png" alt="" class="img-fluid">
+            </span>
+            <span class="flag_container mx-1">
+              <img src="images/ATTArmenia_files/russia.png" alt="" class="img-fluid">
+            </span>
+          </div>
+
+        </div>
       </div>
     </nav>
 
@@ -138,12 +175,12 @@
 
 
   <section class="shape_one container mt-5">
-    <div class="shape_head py-4" style="position:relative;border-bottom: 1px solid #bce8f1;background: #CEE8F5;">
+    <div class="shape_head" style="position:relative;border-bottom: 1px solid #bce8f1;background: #CEE8F5;">
       <h4 class="text-center mb-4"
         style="color: #3a87ad;position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);">E-Commerce &
         Services</h4>
 
-      <div style="position: absolute;right: 0;top: 50%;transform: translateY(-50%);width: 25%;">
+      <div class="shape_head_select" style="position: absolute;right: 0;top: 50%;transform: translateY(-50%);width: 25%;">
         <div class="d-flex justify-content-betwen px-3">
           <p style="width: 60%;margin-bottom: 0;">Complete List</p>
           <select name="" id="" style="width: 60%;border: 1px solid black;">
@@ -259,12 +296,12 @@
   </section>
 
   <section class="shape_one container mt-5">
-    <div class="shape_head py-4" style="position:relative;border-bottom: 1px solid #bce8f1;background: #CEE8F5;">
+    <div class="shape_head" style="position:relative;border-bottom: 1px solid #bce8f1;background: #CEE8F5;">
       <h4 class="text-center mb-4"
         style="color: #3a87ad;position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);">Useful Addresses
       </h4>
 
-      <div style="position: absolute;right: 0;top: 50%;transform: translateY(-50%);width: 25%;">
+      <div class="shape_head_select" style="position: absolute;right: 0;top: 50%;transform: translateY(-50%);width: 25%;">
         <div class="d-flex justify-content-betwen px-3">
           <p style="width: 60%;margin-bottom: 0;">Complete List</p>
           <select name="" id="" style="width: 60%;border: 1px solid black;">
@@ -480,7 +517,7 @@
         </div>
       </div>
 
-      <div class="col-md-3 col-12">
+      <div class="col-md-3 col-12 useful_link_section">
         <div style="border: 1px solid #bce8f1;padding-bottom: 2rem;">
           <p class="py-2 text-center left_main_child2_head">Useful links</p>
           <form>
@@ -626,7 +663,7 @@
       </div>
 
 
-      <div class="col-md-9 col-12">
+      <div class="col-md-9 col-12 blog_section">
         <div class="d-flex justify-content-betwen w-100 px-3">
           <p style="width: 100%;margin-bottom: 0;font-size: 1.5rem;">All Post</p>
           <div style="width: 70%;">
@@ -751,6 +788,10 @@
 
   </section>
 
+  <div class="scrolltop float-right">
+    <i class="fa fa-chevron-up" onclick="topFunction()" id="myBtn" style="background-color: #6B4C8F"></i>
+  </div>
+
 
 
 
@@ -792,6 +833,28 @@
 
   <script>
 
+
+//------------------ SCROLL TOP FUNCTIONALITY CODE---------------------
+
+    // Get the button
+    var mybutton = document.getElementById("myBtn");
+
+    // when the user scroll down 20px from the top of the document,show the btton
+    window.onscroll = function () { scrollFunction() };
+
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        myBtn.style.display = "block";
+      } else {
+        myBtn.style.display = "none";
+      }
+    }
+
+    //When user click on the button,scroll to the top of the document
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
 // $(window).scroll(function(){
 //   var sticky = $('.nav_two'),
 //       scroll = $(window).scrollTop();
@@ -883,6 +946,7 @@ $(window).scroll(function(){
 </body>
 
 </html>
+
 
 
 
