--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </a>
         <button class="navbar-toggler nav_toggle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"><i class="fa fa-bars mt-1" aria-hidden="true" style="color:#FFF;"></i></span>
         </button>
         <div class="collapse navbar-collapse navbar_nav_link" id="navbarSupportedContent">
           <ul class="navbar-nav">
@@ -137,7 +137,7 @@
     </nav>
 
     <div class="banner_img">
-      <h1>Art, Tradition and Trend of Armenia</h1>
+      <h1><span class="art">Art,</span> Tradition and Trend of Armenia</h1>
 
       <!-- <div class="owl-carousel desk-home-owl2-car owl-theme home_car" style="margin-top: 5rem!important;">
         <div class="item">
