--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@ $(window).scroll(function(){
       margin: 10,
       nav: true,
       navText: ['<i class="fa fa-angle-left" aria-hidden="true"></i>', '<i class="fa fa-angle-right" aria-hidden="true"></i>'],
-      dots: false,
+      dots: true,
       autoplay: false,
       responsive: {
         0: {
@@ -903,7 +903,7 @@ $(window).scroll(function(){
       margin: 10,
       nav: true,
       navText: ['<i class="fa fa-angle-left" aria-hidden="true"></i>', '<i class="fa fa-angle-right" aria-hidden="true"></i>'],
-      dots: false,
+      dots: true,
       autoplay: false,
       responsive: {
         0: {
