--- a/index.html
+++ b/index.html
@@ -793,17 +793,43 @@
     <div class="footer_main">
     <div class="footer_main_child">
       <h5>Your Account</h5>
+      <a href="#">Sign in</a>
+      <a href="#">Create an acoount</a>
+      <a href="#">Change the profile</a>
+      <a href="#">Change the password</a>
+      <a href="#">Close the account</a>
     </div>
     <div class="footer_main_child">
       <h5>About Us</h5>
+      <a href="#">About us</a>
+      <a href="#">Our objectives</a>
+      <a href="#">Our charter</a>
+      <a href="#">Our commitments</a>
+      <a href="#">Our confidentiality</a>
     </div>
     <div class="footer_main_child">
       <h5>Contact Us</h5>
+      <a href="#">Organization</a>
+      <a href="#">Contacts</a>
+      <a href="#">Exchange with us</a>
+      <a href="#">My Notifications</a>
     </div>
     <div class="footer_main_child">
       <h5>Assistance</h5>
+      <a href="#">Our advices</a>
+      <a href="#">User manual</a>
+      <p class="pt-4" style="font-size: 1rem; color: #fff;font-weight: 600;">KEEP IN TOUCH</p>
+      <div class="d-flex foot_icon">
+        <a href=""><img src="images/ATTArmenia_files/instagram.png" alt="" class="footer_social_img"></a>
+        <a href=""><img src="images/ATTArmenia_files/map.png" alt="" class="footer_social_img"></a>
+        <a href=""><img src="images/ATTArmenia_files/facebook.png" alt="" class="footer_social_img"></a>
+        <a href=""><img src="images/ATTArmenia_files/Google.png" alt="" class="footer_social_img"></a>
+        <a href=""><img src="images/ATTArmenia_files/LinkedIn.png" alt="" class="footer_social_img"></a>
+        <a href=""><img src="images/ATTArmenia_files/YouTube.png" alt="" class="footer_social_img"></a>
+      </div>
     </div>
   </div>
+
   </footer>
 
   <div class="scrolltop float-right">
